--- a/network/templates/network/following.html
+++ b/network/templates/network/following.html
@@ -1,27 +1,40 @@
 {% extends "network/layout.html" %}
 
 {% block body %}
-    <h1>Following  Posts</h1>
+  <div class="container">
+    <h1>Following Posts</h1>
 
-    <div class="all-posts">
+    <div class="row">
+      <div class="col-md-8 mx-auto">
         {% for post in posts_of_the_page %}
-            <div class="row post">
-                <h5 class="username"><a href="{% url 'profile' user_id=post.user.id %}">@{{post.user}}</a></h5>
-                <h6 class="content">{{post.content}}</h6>
-                <p class="date">{{post.date}}</p>
+          <div class="card my-3">
+            <div class="card-header">
+              <h5 class="card-title mb-0"><a href="{% url 'profile' user_id=post.user.id %}">@{{ post.user }}</a></h5>
             </div>
+            <div class="card-body">
+              <p class="card-text">{{ post.content }}</p>
+              <p class="text-muted">{{ post.date }}</p>
+            </div>
+          </div>
+        {% empty %}
+          <p>No posts to display.</p>
         {% endfor %}
-    </div>
 
-    <nav aria-label="Page navigation example">
-        <ul class="pagination d-flex  justify-content-center">
+        <nav aria-label="Page navigation">
+          <ul class="pagination justify-content-center mt-3">
             {% if posts_of_the_page.has_previous %}
-                <li class="page-item"><a class="page-link" href="?page={{posts_of_the_page.previous_page_number}}">Previous</a></li>
+              <li class="page-item">
+                <a class="page-link" href="?page={{ posts_of_the_page.previous_page_number }}">Previous</a>
+              </li>
             {% endif %}
             {% if posts_of_the_page.has_next %}
-                <li class="page-item"><a class="page-link" href="?page={{posts_of_the_page.next_page_number}}">Next</a></li>
+              <li class="page-item">
+                <a class="page-link" href="?page={{ posts_of_the_page.next_page_number }}">Next</a>
+              </li>
             {% endif %}
-        
-        </ul>
-    </nav>
+          </ul>
+        </nav>
+      </div>
+    </div>
+  </div>
 {% endblock %}
